--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          }
        </style> -->
 
-    <title>Responsive portfolio website Rian - Bedimcode</title>
+    <title>Maggie's Portfolio</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
@@ -294,7 +294,114 @@
       </section>
 
       <!--==================== CONTACT ====================-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <div class="contact__container grid">
+          <div class="contact__data">
+            <h2 class="section__title-2">
+              <span>Contact Me.</span>
+            </h2>
+
+            <p class="contact__description-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+
+            <p class="contact__description-2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+            <div class="geometric-box"></div>
+          </div>
+
+          <div class="contact__mail">
+            <h2 class="contact__title">Send me an email</h2>
+            <form action="" class="contact__form" id="contact-form">
+              <div class="contact__group">
+                <div class="contact__box">
+                  <input
+                    type="text"
+                    name="user_name"
+                    class="contact__input"
+                    id="name"
+                    required
+                    placeholder="First Name"
+                  />
+                  <label for="name" class="contact__label">First Name</label>
+                </div>
+
+                <div class="contact__box">
+                  <input
+                    type="email"
+                    name="user_email"
+                    class="contact__input"
+                    id="email"
+                    required
+                    placeholder="E-mail"
+                  />
+                  <label for="name" class="contact__label">E-mail</label>
+                </div>
+              </div>
+
+              <div class="contact__box">
+                <input
+                  type="text"
+                  name="user_subject"
+                  class="contact__input"
+                  id="subject"
+                  required
+                  placeholder="Subject"
+                />
+                <label for="subject" class="contact__label">Subject</label>
+              </div>
+
+              <div class="contact__box contact__area">
+                <textarea
+                  name="user_message"
+                  id="message"
+                  class="contact__input"
+                  required
+                  placeholder="Message"
+                ></textarea>
+                <label for="message" class="contact__label">Message</label>
+              </div>
+
+              <p class="contact__message" id="contact-message"></p>
+
+              <button type="submit" class="contact__button button">
+                <i class="ri-send-plane-2-line"></i>Send Message
+              </button>
+            </form>
+          </div>
+
+          <div class="contact__social">
+            <img
+              src="assets/img/curved-arrow.svg"
+              alt=""
+              class="contact__social-arrow"
+            />
+            <div class="contact__social-data">
+              <div>
+                <p class="contact__social-description-1">
+                  Does not send emails
+                </p>
+                <p class="contact__social-description-1">
+                  Send me a message on social media
+                </p>
+              </div>
+
+              <div class="contact__social-links">
+                <a href="#" target="_blank" class="contact__social-link">
+                  <i class="ri-facebook-circle-line"></i>
+                </a>
+                <a href="#" target="_blank" class="contact__social-link">
+                  <i class="ri-instagram-line"></i>
+                </a>
+                <a href="#" target="_blank" class="contact__social-link">
+                  <i class="ri-github-line"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--==================== FOOTER ====================-->
@@ -321,7 +428,7 @@
     <script src=""></script>
 
     <!--=============== EMAIL JS ===============-->
-
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
   </body>
