--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
             <li><a href="#home" class="nav__link active-link">Home</a></li>
             <li><a href="#about" class="nav__link">About me</a></li>
             <li><a href="#projects" class="nav__link">Projects</a></li>
-            <li><a href="#contact" class="nav__link">Contact Me</a></li>
+            <li>
+              <a href="#contact" class="nav__link nav__link-button"
+                >Contact Me</a
+              >
+            </li>
           </ul>
 
           <!-- Close Button -->
@@ -87,13 +91,13 @@
             </div>
             <div class="home__social">
               <a href="" target="_blank" class="home__social-link">
+                <i class="ri-facebook-box-line"></i>
+              </a>
+              <a href="" target="_blank" class="home__social-link">
                 <i class="ri-instagram-line"></i>
               </a>
               <a href="" target="_blank" class="home__social-link">
                 <i class="ri-github-fill"></i>
-              </a>
-              <a href="" target="_blank" class="home__social-link">
-                <i class="ri-facebook-box-line"></i>
               </a>
             </div>
           </div>
@@ -149,9 +153,9 @@
                 ><i class="ri-mail-send-line"></i>Contact Me</a
               >
 
-              <a href="#" target="_blank" class="button__ghost">
+              <!-- <a href="#" target="_blank" class="button__ghost">
                 <i class="ri-link"></i>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
@@ -163,7 +167,7 @@
           <span>Services.</span>
         </h2>
 
-        <div class="service__container container grid">
+        <div class="services__container container grid">
           <!-- 1 -->
           <article class="services__card">
             <div class="services__border"></div>
@@ -235,7 +239,11 @@
                 alt=""
                 class="projects__img"
               />
-              <a href="#" class="projects__button button">
+              <a
+                href="https://maegiw.github.io/thd102_git/"
+                class="projects__button button"
+                target="_blank"
+              >
                 <i class="ri-arrow-right-up-line"></i>
               </a>
             </div>
@@ -250,12 +258,20 @@
             </div>
 
             <div class="projects__buttons">
-              <a href="#" target="_blank" class="projects__link">
+              <a
+                href="https://maegiw.github.io/thd102_git/"
+                target="_blank"
+                class="projects__link"
+              >
                 <i class="ri-github-line"></i>View
               </a>
-              <a href="#" target="_blank" class="projects__link">
+              <!-- <a
+                href="https://maegiw.github.io/thd102_git/"
+                target="_blank"
+                class="projects__link"
+              >
                 <i class="ri-github-line"></i>View
-              </a>
+              </a> -->
             </div>
           </article>
 
@@ -267,7 +283,11 @@
                 alt=""
                 class="projects__img"
               />
-              <a href="#" class="projects__button button">
+              <a
+                href="https://tibamef2e.com/thd102/g1/"
+                class="projects__button button"
+                target="_blank"
+              >
                 <i class="ri-arrow-right-up-line"></i>
               </a>
             </div>
@@ -282,12 +302,20 @@
             </div>
 
             <div class="projects__buttons">
-              <a href="#" target="_blank" class="projects__link">
+              <a
+                href="https://tibamef2e.com/thd102/g1/"
+                target="_blank"
+                class="projects__link"
+              >
                 <i class="ri-github-line"></i>View
               </a>
-              <a href="#" target="_blank" class="projects__link">
+              <!-- <a
+                href="https://tibamef2e.com/thd102/g1/"
+                target="_blank"
+                class="projects__link"
+              >
                 <i class="ri-github-line"></i>View
-              </a>
+              </a> -->
             </div>
           </article>
         </div>
@@ -425,7 +453,7 @@
     </a>
 
     <!--=============== SCROLLREVEAL ===============-->
-    <script src=""></script>
+    <script src="assets/js/scrollreveal.min.js"></script>
 
     <!--=============== EMAIL JS ===============-->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
