--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
           <div class="home__perfil">
             <div class="home__image">
-              <img src="/assets/img/MG.jpg" alt="" class="home__img" />
+              <img src="assets/img/MG.jpg" alt="" class="home__img" />
               <div class="home__shadow"></div>
 
               <img
